2002-01-17  Jakub Steiner <jimmac@ximian.com>

	* control-center.png: fix the antialiasing

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (bin_PROGRAMS): Rename binary gnome2-control-center
	Update
	(CLEANFILES): Add this line

2002-01-09  Jean Schurger <jschurger@schurger.org>

	* capplet-dir.c (capplet_new): Check for entry->icon[0] != 0
		if (Icon =) in the desktop file.
		if entry->icon is a DIR
		If entry->icon[0] still NULL.

2002-01-03  Richard Hestilow  <hestilow@ximian.com>

	* capplet-dir.c (capplet_new): Check for ditem::icon != NULL
	before calling gnome_pixmap_file.

	* gnomecc.glade: Remove toolbar & menu stuff (this was causing
	runtime glade warnings).

2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir-view-list.c: Eliminate compiler warnings

	* preferences.c: Eliminate compiler warnings

	* capplet-dir-view.c: Eliminate compiler warnings

	* capplet-dir.c: Eliminate compiler warnings

	* main.c: Eliminate compiler warnings

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnomecc.desktop.in:

	Install into $datadir/applications and add a Categories
	field to the .desktop file.

2001-12-18  Bradford Hovinen  <hovinen@ximian.com>

	* preferences.c (gnomecc_preferences_load): Use GConf
	(gnomecc_preferences_save): Ditto

2001-12-17  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir-view.c (capplet_dir_view_init): Move most of the
	initialization stuff from capplet_dir_view_new to here

	* capplet-dir-view.[ch]: Port to GObject

	* main.c (main): Remove support for launching capplets
	(real_launch_control): Remove

	* capplet-dir.c: Remove bonobo capplet utility functions
	(capplet_activate): Don't use capplet_control_launch

2001-12-13  Richard Hestilow  <hestilow@ximian.com>
	
	* capplet-dir-view-list.c: Remove all g_print statements.
	(header_expose_cb): Fix pixbuf clipping.
	
	* capplet-dir-view.c (capplet_dir_view_new):
	s/gtk_object_unref/g_object_unref.
